app-src/scripts/collapsible/_collapsible-d.scss
collapsible {
  display: block;

  .collapsible-extra-icon {

  }

  .collapsible-title {
    cursor: pointer;
    user-select: none;

    &:focus {
      outline: none;
    }

    .collapsible-expand-icon {
      transition: all 200ms;
    }
  }

  &.is-expanded {
    .collapsible-expand-icon {
      transform: rotate(-180deg);
    }
  }

  .collapsible-panel {
    height: auto;
    display: block;
    overflow: hidden;

    // make sure we don't produce clunky animations
    padding: 0 !important;
    margin: 0 !important;

    &.ng-animate {
      * {
        transition: none !important;
        animation-duration: 0s !important;
      }
    }
  }
}

